--- a/src/cyberChallenges/styles/challenge.css
+++ b/src/cyberChallenges/styles/challenge.css
@@ -9,11 +9,15 @@ body, html {
     grid-template-columns: 0.6fr 0.6fr 0.8fr 0.8fr 0.6fr 0.8fr 0fr; /* Define las columnas */
 }
 
-.chall-title{
+.chall-name{
     color: #007bff;
 }
 
 .checkbox-completed{
     margin-left: 5px;
+}
+
+.div-chall-description{
+    margin-bottom: 50px;
 }
 
